--- a/codigo-fonte/vof-financeiro-backend/package.json
+++ b/codigo-fonte/vof-financeiro-backend/package.json
@@ -10,19 +10,29 @@
     "build": "echo 'No build step required'",
     "test": "echo 'No tests specified'"
   },
-  "keywords": ["financeiro", "api", "nodejs", "express"],
+  "prisma": {
+    "seed": "node prisma/seed.cjs"
+  },
+  "keywords": [
+    "financeiro",
+    "api",
+    "nodejs",
+    "express"
+  ],
   "author": "VOF Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
+    "@prisma/client": "^6.16.3",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1"
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3",
+    "prisma": "^6.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
