--- a/codigo-fonte/vof-financeiro-backend/package.json
+++ b/codigo-fonte/vof-financeiro-backend/package.json
@@ -31,6 +31,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "prisma": "^6.16.3"
   },
