Revisão completa do Frontend

--- a/codigo-fonte/vof-financeiro-backend/.env.example
+++ b/codigo-fonte/vof-financeiro-backend/.env.example
@@ -14,3 +14,6 @@ JWT_SECRET=sua_chave_jwt_super_secreta
 
 # CORS
 CORS_ORIGIN=http://localhost:5173
+
+# PostgreSQL connection string for PGAdmin4
+DATABASE_URL="postgresql://user:senha@localhost:5432/db_financeiro?schema=public"
