--- a/codigo-fonte/vof-financeiro-backend/package.json
+++ b/codigo-fonte/vof-financeiro-backend/package.json
@@ -8,8 +8,11 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "build": "echo 'No build step required'",
+    "postinstall": "prisma generate",
+    "migrate:deploy": "prisma migrate deploy",
     "test": "echo 'No tests specified'"
   },
+  "engines": { "node": ">=18" },
   "prisma": {
     "seed": "node prisma/seed.cjs"
   },
