--- a/codigo-fonte/vof-financeiro-frontend/package.json
+++ b/codigo-fonte/vof-financeiro-frontend/package.json
@@ -12,9 +12,14 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "date-fns": "^4.1.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
